# dynamic_voxels

./: .gitignore  Cargo.toml  README.md  build.rs  composer_temp_save.json  composer_temp_save_backup.json  composer_temp_save_chunks.json  composer_temp_save_full.json  composer_temp_save_islands.json  composer_temp_save_islands_2.json  composer_temp_save_trees.json  config.toml  flake.nix  old_flake.nix  renderdoc_settings.cap  shader_constants.env  shell.nix  small_and_big_spheres.json
.run/: Clean.run.xml  Run.run.xml
assets/: Fall_Tree.vox  Tree1.vox  Tree1small.vox
benches/: bvh_build.rs  change_dag64.rs  dag64_build.rs  dag64_build_fall_tree.rs  dag64_build_fall_tree_par.rs  dag64_compare_int_float.rs  dag64_compare_parallel.rs  query_large_union.rs  static_tree64_build.rs  tree64_build.rs
nix/: cross_compile_functions.nix  cross_crate.nix  dev_shell.nix  env.nix  targets_config.nix
scripts/: buid_win_debug.sh  buid_win_debug_push.sh  buid_win_release.sh  hot_reload.sh  profile.sh  profile_debug.sh  profile_release.sh  rebuild_shaders.sh  run_dev_fast_move_workspace.sh
shaders/: Cargo.toml  _a_tours_filter.slang  _blit.slang  _gi_probe_update.slang  _temporal_denoise.slang  _trace_scene.slang  _trace_tree64.slang  aabb.glsl  binding.glsl  cgs.glsl  constants.h  dda.glsl  debug.glsl  debug.slang  g_buffer.slang  helper_color.slang  helper_math.slang  helper_ray.slang  mat_helper.glsl  mesh.slang  perf_counters.slang  probe.slang  profiler.glsl  ray.glsl  ray_manager.slang  scene.slang  trace_ray.comp  trace_ray.glsl  tree64.slang
shaders/glsl/: Cargo.toml  binding.glsl  build.rs  debug.glsl  interval.glsl
shaders/slang/: _a_tours_filter.slang  _blit.slang  _temporal_denoise.slang  debug.slang  g_buffer.slang  helper_color.slang  helper_math.slang  perf_counters.slang  ray_manager.slang  scene.slang  texture_heap.slang  tree64.slang
shaders/src/: lib.rs
slang_shaders/: _a_tours_filter.slang  _blit.slang  _temporal_denoise.slang  _trace_scene.slang  _trace_tree64.slang  a_tours_filter.slang  backend_common.slang  binding.slang  compose.slang  g_buffer.slang  helper_ray.slang  perf_counters.h.slang  perf_counters.slang  ray.slang  ray_manager.slang  render.slang  scene.slang  temporal_denoise.slang  texture_heap.slang  trace_ray.slang  tree64.slang  types.slang  utilits.slang
src/: aabb.rs  buddy_controller.rs  color.rs  main.rs  profiler.rs  reload.rs  render.rs  state_saver.rs  util.rs
src/bvh/: bucket.rs  helper.rs  mod.rs  node.rs  shape.rs  traits.rs
src/cgs_tree/: controller.rs  mod.rs  tree.rs  util.rs
src/csg/: mod.rs
src/csg_renderer/: color_controller.rs  data_controller.rs  mod.rs
src/csg_tree/: aabb.rs  controller.rs  gradient.rs  mod.rs  tree.rs  util.rs
src/editor/: mod.rs
src/fast_pos_query_csg_tree/: from_vec_csg_tree.rs  impl_traits.rs  tree.rs
src/gi/: atlas.rs  gi_active.rs  gi_pool.rs  gi_pool_debugger.rs  mod.rs  probe_pool.rs
src/marching_cubes/: index_cache.rs  marching_cubes.rs  marching_cubes_impl.rs  marching_cubes_tables.rs  mod.rs
src/material/: controller.rs  mod.rs  voxels.rs
src/mesh/: from_volume.rs  gpu_mesh.rs  mod.rs  renderer.rs  scene.rs
src/model/: manual_example.rs  mod.rs
src/model_debug_renderer/: mod.rs
src/model_example/: fence.rs  islands.rs  mod.rs
src/model_renderer/: mod.rs
src/model_synthesis/: add_nodes.rs  builder.rs  collapse.rs  collapse_util.rs  collapser_data.rs  func_data.rs  mod.rs  pending_operations.rs  pos_set.rs  relative_path.rs  reset_nodes.rs  template.rs  volume.rs
src/multi_data_buffer/: allocated_vec.rs  buddy_buffer_allocator.rs  buddy_controller.rs  cache_allocated_vec.rs  cached_streamed_vec.rs  cached_vec.rs  copy_allocated_vec.rs  full_search_allocated_vec.rs  kmp.rs  kmp_search_allocated_vec.rs  mod.rs  multi_allocation_vec.rs  paralle_vec_old.rs  parallel_vec.rs  split_allocated_vec.rs  split_allocated_vec_free_ranges.rs  streamed_multi_vec.rs  streamed_split_vec.rs  worker_vec.rs
src/profiler/: mod.rs
src/render/: renderer.rs
src/render_csg_tree/: base.rs  from_vec_csg_tree.rs
src/scene/: bvh.rs  dag64.rs  dag_store.rs  debug.rs  gi.rs  mod.rs  object.rs  renderer.rs  staging_copies.rs  static_dag64.rs  tree64.rs  worker.rs
src/shader/: cgs.rs  debug.rs  mod.rs  ray.rs  trace_ray.rs
src/slot_map_csg_tree/: from_vec_csg_tree.rs  mod.rs  tree.rs  util.rs
src/static_voxel_dag64/: from_voxel_grid.rs  mod.rs
src/util/: aabb.rs  aabb2d.rs  aabb3d.rs  aabb_transformer.rs  buddy_allocator.rs  default_types.rs  iaabb3d.rs  iter_merger.rs  kmp.rs  math.rs  math_config.rs  matrix.rs  mod.rs  number.rs  parallel_pool.rs  parallel_reuse_buffer.rs  profiler.rs  reuse_buffer.rs  shader_constants.rs  (+4 more)
(+304 files in other folders)
