[package]
name = "dynamic_voxels"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lints.rust]
unused = "allow"

[profile.dev-fast]
inherits = "dev"
debug = 0
strip = "debuginfo"

[profile.release]
debug = 1

[lib]
name = "reload"
path = "src/reload.rs"
crate-type = ["rlib", "dylib"]

[[bench]]
name = "static_tree64_build"
harness = false

[[bench]]
name = "tree64_build"
harness = false

[features]
islands = []
profile_islands = []
scene = []
profile_dag = []

[dependencies]
octa-force = { path = "../octa-force-rs" }
# octa-force = { version = "0.3.2", git = "https://github.com/MaartenBehn/octa-force-rs" }
fastrand = "2.2.0"

simple-easing = "1.0.1"

feistel-permutation-rs = { git="https://github.com/MaartenBehn/permutation-rs.git", version = "0.1.5"}
kiddo = "5.0.3"
# fast_poisson = { path="../fast_poisson", features = ["single_precision"]}
fast_poisson = { git="https://github.com/MaartenBehn/fast_poisson.git", version = "1.0.3", features = ["single_precision"]}

# Graphs
egui_node_graph2 = { git="https://github.com/trevyn/egui_node_graph2.git", version="0.7" }
# egui-graph-edit = { path = "../egui_node_graph/egui-graph-edit/egui-graph-edit" }
# egui-graph-edit = "0.6.0"

slotmap = "1.0.7"

half = "2.6.0"

tree64 = { git="https://github.com/expenses/tree64.git", version = "0.1.0" }
bvh = "0.11.0"
nalgebra = "=0.33.2"

#borrow = "1.3.0"

## For own DAG64 implementation
arrayvec = "0.7.6"
rayon = "1.10"
hashbrown = "0.15.2"
fnv = "1.0.7"
parking_lot = "0.12"

# For importing magica voxel models
dot_vox = "5"

bitvec = "1"


[dev-dependencies]
proptest = "0.9.6"
criterion = { version = "0.5", features = ["html_reports"] }


