[package]
name = "dynamic_voxels"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lints.rust]
unused = "allow"

[profile.dev-fast]
inherits = "dev"
debug = 0
strip = "debuginfo"

[profile.release]
debug = 1

[lib]
name = "reload"
path = "src/reload.rs"
crate-type = ["rlib", "dylib"]

[[bench]]
name = "dag64_build"
harness = false

[[bench]]
name = "dag64_build_fall_tree"
harness = false

[[bench]]
name = "query_large_union"
harness = false

[[bench]]
name = "bvh_build"
harness = false

[features]
islands = []
scene = []
graph_builder = []

[dependencies]
octa-force = { path = "../octa-force-rs" }
# octa-force = { version = "0.3.3", git = "https://github.com/MaartenBehn/octa-force-rs" }

spirq= "0.2.2"
spirv-struct-layout = "0.1.2"

fastrand = "2.2.0"
simple-easing = "1.0.1"

# fast_poisson = { path="../fast_poisson", features = ["single_precision"]}
# fast_poisson = { git="https://github.com/MaartenBehn/fast_poisson.git", version = "1.0.3", features = ["single_precision"]}
# kiddo = "5.0.3"

slotmap = "1.0.7"

half = "2.6.0"

tree64 = { git="https://github.com/expenses/tree64.git", version = "0.1.0" }
bvh = "0.11.0"
nalgebra = "=0.33.2"

#borrow = "1.3.0"

## For own DAG64 implementation
rayon = "1.10"
hashbrown = { version = "0.15", features = [ "rayon" ] }
fnv = "1.0.7"
parking_lot = { version = "0.12" }

# For importing magica voxel models
dot_vox = "5"

bitvec = "1"

# for async workers
smol = "2.0"
oneshot = "0.1"
itertools = "0.14"
smallvec = {version = "1.15", features = [ "union", "const_new", "const_generics" ]}

# Depth and Heat map ranges in ui
egui_double_slider = "0.9"

# Graph editor
egui-snarl = { version = "0.8.0", features = [ "serde" ] }
egui-probe = "0.9.0"
serde = "*"
serde_json = "*"

[dev-dependencies]
proptest = "0.9.6"
criterion = { version = "0.5", features = ["html_reports"] }

